@@ -35,6 +35,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11368. Fix SSLFactory truststore reloader thread leak in
     KMSClientProvider. (Arun Suresh via wang)
 
+    HADOOP-11333. Fix deadlock in DomainSocketWatcher when the notification pipe
+    is full. (zhaoyunjiong via cmccabe)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
